# protos-go

./: .gitignore  Dockerfile  MODULE.bazel  Makefile  README  go.mod  makecopy.sh
lib/errors/: errors.pb.go
lib/health/: health.pb.go
lib/types/: types.pb.go
protos/errors/: BUILD.bazel  errors.proto
protos/health/: BUILD.bazel  health.proto
protos/types/: BUILD.bazel  types.proto
