load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "health_proto",
    srcs = ["health.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "health_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/x/protos/lib/health",
    proto = ":health_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "health",
    embed = [":health_go_proto"],
    importpath = "github.com/x/protos/lib/health",
    visibility = ["//visibility:public"],
)
